# strong-coupling-core

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: _ball_joint_constraint_8cpp.html  _ball_joint_constraint_8h.html  _ball_joint_constraint_8h_source.html  _connector_8cpp.html  _connector_8h.html  _connector_8h_source.html  _constraint_8cpp.html  _constraint_8h.html  _constraint_8h_source.html  _equation_8cpp.html  _equation_8h.html  _equation_8h_source.html  _jacobian_element_8cpp.html  _jacobian_element_8h.html  _jacobian_element_8h_source.html  _lock_constraint_8cpp.html  _lock_constraint_8h.html  _lock_constraint_8h_source.html  _mat3_8cpp.html  _mat3_8h.html  _mat3_8h_source.html  _quat_8cpp.html  _quat_8h.html  _quat_8h_source.html  _r_e_a_d_m_e_8md.html  _rigid_body_8cpp.html  _rigid_body_8h.html  _rigid_body_8h_source.html  _slave_8cpp.html  _slave_8h.html  _slave_8h_source.html  _solver_8cpp.html  _solver_8h.html  _solver_8h_source.html  _test_8h.html  _test_8h_source.html  _vec3_8cpp.html  _vec3_8h.html  _vec3_8h_source.html  annotated.html  (+50 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  files_3.js  files_5.js  files_6.js  functions_1.js  functions_11.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_f.js  groups_0.js  search.js  variables_0.js
include/: BallJointConstraint.h  Connector.h  Constraint.h  Equation.h  HingeConstraint.h  HingeMotorConstraint.h  JacobianElement.h  LockConstraint.h  Mat3.h  Quat.h  Slave.h  Solver.h  Vec3.h  scConnector.h  scConstraint.h  scEquation.h  scLockConstraint.h  scQuat.h  scSlave.h  scSolver.h  scVec3.h
include/sc/: Connector.h  Equation.h  Solver.h
src/: BallJointConstraint.cpp  Connector.cpp  Constraint.cpp  Equation.cpp  HingeConstraint.cpp  HingeMotorConstraint.cpp  JacobianElement.cpp  LockConstraint.cpp  Mat3.cpp  Quat.cpp  Slave.cpp  Solver.cpp  Vec3.cpp  scConnector.cpp  scConstraint.cpp  scEquation.cpp  scLockConstraint.cpp  scQuat.cpp  scSlave.cpp  scSolver.cpp  scVec3.cpp
test/: CMakeLists.txt  RigidBody.cpp  RigidBody.h  Slave.cpp  particles.cpp  rigid.cpp  rigid.m  scRigidBody.cpp  scRigidBody.h  scSlave.cpp
