CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(RIGID_SRCS
    RigidBody.cpp
    rigid.cpp
)
SET(RIGID_HEADERS
    RigidBody.h
)

INCLUDE_DIRECTORIES(${UMFPACK_INCLUDE_DIR})
LINK_DIRECTORIES(   ${UMFPACK_LIBRARY_DIR})

ADD_EXECUTABLE(rigid   ${RIGID_HEADERS} ${RIGID_SRCS})

TARGET_LINK_LIBRARIES(rigid     sc m umfpack amd cblas) #   atlas?
